--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@700&display=swap");
+
 html,
 body {
   padding: 0;
@@ -13,4 +15,19 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.photo {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+  object-fit: cover;
+}
+
+.vw {
+  height: 100vh;
+  width: 100vw;
 }
